src/main/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: microprofile-config-istio-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: microprofile-config-istio-gateway
spec:
  hosts:
    - "*"
  gateways:
    - microprofile-config-istio-gateway
  http:
    - match:
        - uri:
            prefix: /microprofile-config-istio
      rewrite:
        uri: /
      route:
        - destination:
            host: microprofile-config-istio-service
            port:
              number: 8080
